--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://www.linkedin.com/in/silvia-nurrobianti-95b55913a/"><i class='bx bxl-linkedin-square'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="Asset/cvisilanti.png" download="cvisilanti.png" class="btn">Download CV</a>
         </div>
     </section>
     <table>
